<resources>
    <string name="app_name">NewsReader</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="header_layout_header_text">Daily World News</string>
    <string name="menu_drawer_rubrics">Rubrics</string>
    <string name="menu_drawer_first_data">All news</string>
    <string name="menu_drawer_second_data">The Wall Street Journal</string>
    <string name="menu_drawer_third_data">Business</string>
    <string name="menu_drawer_fourth_data">TechCrunch</string>
    <string name="menu_drawer_fifth_data">Bitcoin</string>
</resources>
